<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StaTapAlpha</string>
    <string name="edit_plays">Edit Plays</string>
    <string name="undo">Undo Play</string>
    <string name="made">Made</string>
    <string name="miss">Missed</string>
    <string name="field_goal">Field Goal</string>
    <string name="free_throw">Free Throw</string>
    <string name="foul">Foul</string>
    <string name="sub">Player Sub</string>
    <string name="turnover">Turnover</string>
    <string name="steal">Steal</string>
    <string name="block">Block</string>
    <string name="assist">Assist</string>
    <string name="rebound">Rebound</string>
    <string name="back">Back</string>
    <string name="fore">For</string>
    <string name="p1">1</string>
    <string name="p2">2</string>
    <string name="p3">3</string>
    <string name="p4">4</string>
    <string name="p5">5</string>
    <string name="p6">6</string>
    <string name="p7">7</string>
    <string name="p8">8</string>
    <string name="p9">9</string>
    <string name="p10">10</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="points">Points:</string>
    <string name="fouls">Fouls:</string>
    <string name="title">StaTap</string>
    <string name="new_game">New Game</string>
    <string name="hyphen">-</string>
    <string name="edit">Edit Teams</string>
    <string name="create">Create Team</string>
    <string name="delete">Delete</string>
    <string name="title_activity_new_game">NewGame</string>
    <string name="title_activity_court_activity">Court Activity</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="pickteams">PICK YOUR TEAMS</string>
    <string name="action_settings">Settings</string>
    <string name="selectT">Select a Team</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_create_team">Create Team</string>
    <string name="currentteams">Current Teams</string>
    <string name="editmsg">Tap a team to edit it.</string>
    <string name="teamname">Team Name:</string>
    <string name="title_activity_manual_">Manual_Activity</string>
    <string name="title_activity_substitution">SubstitutionActivity</string>
    <string name="playerStats">Player Stats</string>
    <string name="title_activity_stat">StatActivity</string>
    <string name="title_activity_edit_team">EditTeam</string>
    <string name="dteamname">Team Name</string>
    <string name="playerHelp">Tap a Jersey Number to get info about that player</string>
    <string name="jerseynum">Jersey Number:</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="addplayer">Add Player</string>
    <string name="gametitle">Game Title:</string>
    <string name="zero">0</string>
    <string name="na">N/A</string>
    <string name="stats">Stats</string>
    <string name="test">Test</string>
    <string name="refresh">Refresh</string>
    <string name="statP">P</string>
    <string name="statFT">FT</string>
    <string name="statBL">BL</string>
    <string name="statA">A</string>
    <string name="statR">RB</string>
    <string name="statS">S</string>
    <string name="statT">T</string>
    <string name="statF">F</string>
    <string name="statFG">2Pt</string>
    <string name="statTP">3Pt</string>
    <string name="num">#</string>
    <string name="jersey">Jersey</string>
    <string name="title_activity_current_stats">CurrentStats</string>
    <string name="hello_world">Hello world!</string>
    <string name="colon">:</string>
    <string name="player">#</string>
    <string name="delplay">Tap and hold on a play to delete it</string>
    <string name="timeP">Time per quarter: </string>
	
    <string-array name="time_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    
</resources>
