<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/Blank"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/playerContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:layout_marginStart="190dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/team1Container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/team1Players"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/p1"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:onClick="setPlayer"
                    android:text="@string/p1" />

                <Button
                    android:id="@+id/p2"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:onClick="setPlayer"
                    android:text="@string/p2" />

                <Button
                    android:id="@+id/p3"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:onClick="setPlayer"
                    android:text="@string/p3" />

                <Button
                    android:id="@+id/p4"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:onClick="setPlayer"
                    android:text="@string/p4" />

                <Button
                    android:id="@+id/p5"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:onClick="setPlayer"
                    android:text="@string/p5" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/team1Points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/p1p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/zero"
                    android:textColor="#3399FF"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/p2p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/zero"
                    android:textColor="#3399FF"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/p3p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/zero"
                    android:textColor="#3399FF"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/p4p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/zero"
                    android:textColor="#3399FF"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/p5p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="#3399FF"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/team1Fouls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/p1f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/zero"
                    android:textColor="#FF4747"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/p2f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/zero"
                    android:textColor="#FF4747"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/p3f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/zero"
                    android:textColor="#FF4747"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/p4f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/zero"
                    android:textColor="#FF4747"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/p5f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="#FF4747"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/team2Container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/team2Players"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/p6"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:onClick="setPlayer"
                    android:text="@string/p6" />

                <Button
                    android:id="@+id/p7"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:onClick="setPlayer"
                    android:text="@string/p7" />

                <Button
                    android:id="@+id/p8"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:onClick="setPlayer"
                    android:text="@string/p8" />

                <Button
                    android:id="@+id/p9"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:onClick="setPlayer"
                    android:text="@string/p9" />

                <Button
                    android:id="@+id/p10"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:onClick="setPlayer"
                    android:text="@string/p10" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/team2Points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/p6p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/zero"
                    android:textColor="#3399FF"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/p7p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/zero"
                    android:textColor="#3399FF"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/p8p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/zero"
                    android:textColor="#3399FF"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/p9p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/zero"
                    android:textColor="#3399FF"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/p10p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="#3399FF"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/team2Fouls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/p6f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/zero"
                    android:textColor="#FF4747"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/p7f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/zero"
                    android:textColor="#FF4747"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/p8f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/zero"
                    android:textColor="#FF4747"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/p9f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:text="@string/zero"
                    android:textColor="#FF4747"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/p10f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="#FF4747"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/leftButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/rebound"
                android:layout_width="190dp"
                android:layout_height="80dp"
                android:onClick="recordRebound"
                android:text="@string/rebound" />

            <Button
                android:id="@+id/assist"
                android:layout_width="190dp"
                android:layout_height="80dp"
                android:onClick="recordAssist"
                android:text="@string/assist" />

            <Button
                android:id="@+id/block"
                android:layout_width="190dp"
                android:layout_height="80dp"
                android:onClick="recordBlock"
                android:text="@string/block" />

            <Button
                android:id="@+id/steal"
                android:layout_width="190dp"
                android:layout_height="80dp"
                android:onClick="recordSteal"
                android:text="@string/steal" />

            <Button
                android:id="@+id/turnover"
                android:layout_width="190dp"
                android:layout_height="80dp"
                android:onClick="recordTurnover"
                android:text="@string/turnover" />

            <Button
                android:id="@+id/sub"
                android:layout_width="190dp"
                android:layout_height="80dp"
                android:onClick="substitution"
                android:text="@string/sub" />

            <Button
                android:id="@+id/foul"
                android:layout_width="190dp"
                android:layout_height="80dp"
                android:onClick="recordFoul"
                android:text="@string/foul"
                android:color="#FF0079FF" />
        </LinearLayout>

        <ImageView
            android:id="@+id/court"
            android:layout_width="900dp"
            android:layout_height="600dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/court" />

        <LinearLayout
            android:id="@+id/rightButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/editPlays"
                android:layout_width="190dp"
                android:layout_height="70dp"
                android:text="@string/edit_plays"
                android:visibility="gone" />

            <Button
                android:id="@+id/undoPlay"
                android:layout_width="190dp"
                android:layout_height="70dp"
                android:onClick="undoPlay"
                android:text="@string/undo" />

            <Button
                android:id="@+id/playerStats"
                android:layout_width="190dp"
                android:layout_height="70dp"
                android:visibility="gone"
                android:text="@string/playerStats" />

            <TextView
                android:id="@+id/fgText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/field_goal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="34sp" />

            <Button
                android:id="@+id/fgMade"
                android:layout_width="190dp"
                android:layout_height="85dp"
                android:onClick="recordMadeShot"
                android:text="@string/made" />

            <Button
                android:id="@+id/fgMissed"
                android:layout_width="190dp"
                android:layout_height="85dp"
                android:onClick="setAction"
                android:text="@string/miss" />

            <TextView
                android:id="@+id/ftText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/free_throw"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="34sp" />

            <Button
                android:id="@+id/ftMade"
                android:layout_width="190dp"
                android:layout_height="85dp"
                android:onClick="recordMadeShot"
                android:text="@string/made" />

            <Button
                android:id="@+id/ftMissed"
                android:layout_width="190dp"
                android:layout_height="85dp"
                android:onClick="setAction"
                android:text="@string/miss" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
		android:layout_marginStart="135dp"
        android:text="@string/points"
        android:textColor="#3399FF"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/fouls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
		android:layout_marginStart="135dp"
        android:text="@string/fouls"
        android:textColor="#FF4747"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="stats"
        android:text="@string/stats" />

</RelativeLayout>