<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvPNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/na"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/tvColon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:textSize="30sp"
        android:text="@string/colon" />
    <TextView
        android:id="@+id/tvHashtag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:textSize="30sp"
        android:text="@string/player" />
    <TextView
        android:id="@+id/tvJNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:textSize="30sp"
        android:text="@string/na" />
    <TextView
        android:id="@+id/tvPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:textSize="30sp"
        android:text="@string/na" />

</RelativeLayout>
