<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Stock"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.statapalph+a.CreateTeam" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="34dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/homeTeamTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentteams"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="70sp" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="500dp"
            android:layout_height="400dp"
            android:background="#40969696" >
        </ListView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editmsg"
            android:textSize="30sp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_marginStart="51dp"
        android:layout_marginTop="81dp"
        android:layout_toEndOf="@+id/linearLayout1" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/teamname"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="20sp"
            android:background="#40969696" />

        <EditText
            android:id="@+id/editTeam"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="30"
            android:ems="10" >
            

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create"
            android:onClick="create" />
    </LinearLayout>

</RelativeLayout>